# fzfmenu

./: Cargo.toml  Makefile  README.md  fzfmenu.py
assets/completions/zsh/: _fzfmenu
examples/: config.toml
examples/plugins/: app_launcher.py  config.toml  history.py  jumper.py  killer.py  mpris.py  sing-box.py  sink.py
src/: api.rs  app.rs  main.rs  plugin.rs
