[package]
name = "fzfmenu"
version = "0.4.5"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
vipera = { version = "0.2.2", features = ["toml"], default-features = false }
